# grbtools

./: README.md  pyproject.toml  update.sh
grb_analyzer/: __init__.py
grb_analyzer/analysis/: __init__.py  fitting.py  models.py
grb_analyzer/core/: __init__.py  grb_event.py
grb_analyzer/data/: __init__.py  base_processor.py  optical_processor.py  xray_processor.py
grb_analyzer/utils/: flux_converter.py  time_converter.py
grbtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_optical.py  test_xray.py
